--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lamp-switch/RF24"]
-	path = lamp-switch/RF24
-	url = https://github.com/maniacbug/RF24.git
+[submodule "RF24"]
+	path = RF24
+	url = https://github.com/stanleyseow/RF24.git
